--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@parcel/transformer-glsl": "^2.0.0-beta.2",
     "@parcel/transformer-image": "^2.0.0-nightly.1981",
     "parcel-bundler": "^1.12.5",
+    "rimraf": "^3.0.2",
     "three": "^0.128.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "npx parcel index.html --no-source-maps",
+    "build": "rimraf dist && npx parcel build index.html --no-source-maps"
   },
   "author": "",
   "license": "ISC"
